Apply OOBI generated models